# cpp-learning

./: CMakeLists.txt  Makefile  calculator  compile_and_run.sh  msys2_bashrc_setup.txt  msys2_proxy_setup.sh  start_msys2_proxy.ps1  start_msys2_with_proxy.bat
.cache/clangd/index/: calculator.cpp.44CCBA3D5C95DA64.idx
calculator.dSYM/Contents/Resources/DWARF/: calculator
docs/: week1.md  大纲.md
docs/concepts/: 1.md  2.md
week1/: CMakeLists.txt
week1/day1/: CMakeLists.txt  Makefile  caculator.cpp  calculator  calculator.cpp  hello.cpp
week1/day1/calculator.dSYM/Contents/Resources/DWARF/: calculator
week1/day2/: smartptr  smartptr.cpp
week1/day2/smartptr.dSYM/Contents/: Info.plist
week1/day2/smartptr.dSYM/Contents/Resources/DWARF/: smartptr
week1/day2/smartptr.dSYM/Contents/Resources/Relocations/aarch64/: smartptr.yml
